# ffizer

./: .cirrus.yml  .gitignore  .markdownlint.yaml  .mise.toml  .rtx.toml  .travis.yml  BOM.txt  CHANGELOG.md  CREDITS  Cargo.toml  Makefile.toml  README.md  appveyor.yml  azure-pipelines.yml  jreleaser.yml  release-plz.toml  release.toml  rust-toolchain.toml  snapcraft.yaml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: _build-universal.yaml  _build-universal.yml  _build.yaml  _build.yml  ci.yaml  early-access.yaml  release-plz.yml  release.yaml
ci/: upload_release.sh
docs/: .mise.toml  book.toml  ffizer.schema.json  index.html
docs/book/: 404.html  authoring_tutorial.html  builtin_functions.html  builtin_variables.html  changelog.html  editors_setup.html  how_to.html  index.html  overview.html  print.html  schema_of_ffizer_yaml.html  searchindex.js  searchindex.json  template_authoring.html  template_configuration.html  template_in_5min.html  toc.html  toc.js
docs/src/: SUMMARY.md  authoring_tutorial.md  builtin_functions.md  builtin_variables.md  editors_setup.md  how_to.md  schema_of_ffizer_yaml.md  template_authoring.md  template_configuration.md  template_in_5min.md
docs/theme/: index.hbs
pkg/brew/: README.md  ffizer-bin.rb
scripts/: getLatest.sh
src/: cli_opt.rs  cmd_opt.rs  ctx.rs  error.rs  files.rs  git.rs  graph.rs  hbs.rs  lib.rs  main.rs  path_pattern.rs  scripts.rs  source_file.rs  source_loc.rs  source_uri.rs  template_cfg.rs  template_composite.rs  transform_values.rs  tree.rs  ui.rs  variable_def.rs  variables.rs
src/cfg/: ignore_cfg.rs  import_cfg.rs  mod.rs  script_cfg.rs  template_cfg.rs  template_composite.rs  transform_values.rs  variable_cfg.rs
src/git/: cli.rs  git2.rs  mod.rs
src/hbs/: env_helpers.rs  http_helpers.rs  mod.rs  path_helpers.rs  string_helpers.rs
src/jreleaser/distributions/ffizer/brew/: README.md.tpl  formula.rb.tpl
src/timeline/: files.rs  mod.rs  options.rs  persist.rs
src/tools/: dir_diff_list.rs  mod.rs
src/ui/: mod.rs  tree.rs
tests/: dir_diff.rs  dir_diff_list.rs  e2e.rs  sample.rs
tests/data/4compose/template_1/: .ffizer.yaml
tests/data/4compose/template_2/: file_2.txt
tests/data/log_error/template/: .ffizer.yaml
tests/data/reapply/expected/: file_5.txt
tests/data/reapply/expected/.ffizer/: options.yaml
tests/data/template_1/: file_2.txt  file_5_{{ project_name }}.txt.ffizer.hbs
tests/data/template_1/.ffizer.samples.d/: my-project.cfg.yaml
tests/data/template_1/.ffizer.samples.d/my-project.expected/: file_4_my_project.txt  file_5_my-project.txt
tests/data/template_1/.ffizer.samples.d/my-project.expected/.ffizer/: options.yaml
tests/data/template_1/.ffizer.samples.d/my-project.expected/dir_2_my-project/: file_1_2.txt
tests/data/template_1/.ffizer.samples.d/my-project.expected/dir_3/: my_project_bug264.txt
tests/data/template_1/dir_1/: file_1_1.txt
tests/data/template_10_ignores_diff/.ffizer.samples.d/: my-project.cfg.yaml
tests/data/template_2/.ffizer.samples.d/my-project.expected/: .gitignore
tests/data/template_3/: .ffizer.yaml
tests/data/template_3/.ffizer.samples.d/my-project.expected/: file1.txt
tests/data/template_4_compose/: .ffizer.yaml
tests/data/template_4_compose/my-prject.expected/: file_4.txt
tests/data/template_6_if_bool/: file1.txt.ffizer.hbs
tests/data/template_7_ignores/: .ffizer.yaml
tests/data/template_8_variables/: .ffizer.yaml
tests/data/test_1/expected/: file_1.txt
tests/data/test_2/expected/: .gitignore
tests/data/test_2/template/: .gitignore.ffizer.hbs
tests/data/test_3/expected/: file2.txt
tests/data/test_3/template/: .ffizer.yaml  file1.txt.ffizer.hbs
tests/data/test_4_compose/expected/: file_5.txt
tests/data/test_4_compose/template/: .ffizer.yaml
tests/data/test_4_compose/template_1_1/: file_3.txt
tests/data/test_5_use_template_dir/template/: file2.txt
tests/data/test_6_if_bool/template/: .ffizer.yaml  file1.txt.ffizer.hbs
tests/data/test_7_ignores/template/: .ffizer.yaml
tests/data/test_8_variables/expected/: file1.txt
tests/data/test_8_variables/template/: file1.ffizer.hbs.txt
tests/log_error/template/: bar.ffizer.hbs
tests/test_1/expected/: file_1.txt  file_2.txt  file_3.txt  file_4_my-project.txt  file_5_my-project.txt
tests/test_1/template/: .ffizer.yaml  file_2.txt.ffizer.hbs  file_3.txt.ffizer.hbs  file_4_{{ project_name }}.txt  file_5_{{ project_name }}.txt.ffizer.hbs  file_6.hbs
tests/test_2/expected/: .gitignore
tests/test_2/template/: .gitignore.ffizer.hbs
tests/test_3/expected/: file1.txt
tests/test_3/template/: .ffizer.yaml
tests/test_4/expected/: file_2.txt  file_3.txt
tests/test_4/template_1/: .ffizer.yaml  file_1.txt  file_5.txt.ffizer.hbs
tests/test_4/template_1_1/: file_5.txt.ffizer.hbs
tests/test_4/template_2/: file_5.txt.ffizer.hbs
tests/test_4_compose/template_1_1/: file_1_1.txt
tests/test_5_use_template_dir/template/: .ffizer.yaml
tests/test_6_if_bool/expected/: file1.txt
